test/correct/EnumFromTo3.hs
module EnumFromTo3 where

main :: [Int]
main = list
  where
    list :: [Int]
    list = [50..60]
