test/typeerrors/Examples/ExprListResult.hs
module ExprListResult where

f :: Int
f = [ 5 ]
